@@ -398,5 +398,6 @@ struct spvm_env {
   void* (*get_package_var_object_by_name)(SPVM_ENV* env, const char* package_name, const char* package_var_name, const char* signature, int32_t* exception_flag, const char* file, int32_t line);
   void (*call_static_method_by_name)(SPVM_ENV* env, const char* package_name, const char* sub_name, const char* signature, SPVM_VALUE* stack, int32_t* exception_flag, const char* file, int32_t line);
   void (*call_method_by_name)(SPVM_ENV* env, void* object, const char* sub_name, const char* signature, SPVM_VALUE* stack, int32_t* exception_flag, const char* file, int32_t line);
+  int32_t (*get_field_id_by_object)(SPVM_ENV* env, SPVM_OBJECT* obj, const char* field_name, const char* signature);
 };
 #endif
